--- a/Data Scientist/Data Dashboard/app/templates/index.html
+++ b/Data Scientist/Data Dashboard/app/templates/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link href="../static/img/icon.ico" rel="SHORTCUT ICON" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" i
           ntegrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -13,8 +13,8 @@
   </head>
   <body>
     <nav class="navbar navbar-light bg-light">
-      <a class="navbar-brand" href="#">Dashboard</a>
-      <img src="../static/img/githublogo.png" width="30" height="30" alt="">
+      <a class="navbar-brand" href="#">Data Dashboard</a>
+      <a href="https://github.com/BaldwinHe"><img src="../static/img/githublogo.png" width="30" height="30" alt=""></a>
     </nav>
 
     <div id="charts" class="container mt-3 text-center">
@@ -55,9 +55,12 @@
               <p class="card-text">Data Source : <a href="https://data.worldbank.org/"
                                                     class="card-link">The World Bank</a></p>
 
-              <p class="card-text">Portfolio Repository: <a href="#"
-                                                    class="card-link">Bye Bai</a></p>
+              <p class="card-text">Portfolio Repository: <a href="https://github.com/BaldwinHe/PortfolioOfBai"
+                                                    class="card-link">PortfolioOfBai</a></p>
             </div>
+
+            <div class="card-footer text-muted">Last updated in 2020.3.12</div>
+
           </div>
         </div>
       </div>
